# lingua_cli_rust

./: .gitignore  Cargo.toml  README.md  data.json
files/: dictionary.json.zlib  phrases.json  sentences.json  words.json
src/: file_io.rs  game.rs  main.rs  models.rs  utils.rs  words.rs
tools/: add_words.py  dictionary_lowercase.py  ffmpeg_script.sh  pack_dictionary.py  rename.py  unpack_dictionary.py
