[package]
name = "lingua_cli_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
console = { version = "0.15.8", features = ["windows-console-colors"] }
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
